# homecooked

./: .dockerignore  .env  .gitignore  .taplo.toml  Cargo.toml  Earthfile  README.md  docker-compose.yml  flake.nix  renovate.json  rust-toolchain.toml
.config/: hakari.toml
.github/workflows/: ci.yml
crates/embeddings/: Cargo.toml  README.md  default.nix
crates/embeddings/src/: builder.rs  common.rs  graph.rs  main.rs  plot.rs  prompt.rs  search.rs  types.rs  unlinked.rs
crates/focus/: Cargo.toml  Justfile  default.nix
crates/focus/src/: appkiller.rs  main.rs
crates/gardener/: Cargo.toml  default.nix
crates/gardener/src/: clean.rs  main.rs
crates/homecooked-hack/: Cargo.toml
crates/llm-assistant/: Cargo.toml  default.nix  docker.nix
crates/llm-assistant/config/: config.ini.example  templates.yml
crates/llm-assistant/src/: config.rs  templates.rs
crates/llm-assistant/src/commands/: completion.rs  mod.rs  readwise.rs  smartgpt.rs
crates/llm-assistant/src/server/: errors.rs  mod.rs  openai_types.rs  tools.rs
crates/llm-assistant/src/tools/: readwise.rs  youtube.rs
crates/llm-toolkit/: Cargo.toml  default.nix
crates/llm-toolkit/src/: lib.rs
crates/llm-toolkit/src/conversation/: mod.rs
crates/llm-toolkit/src/document/loader/: mod.rs
crates/llm-toolkit/src/provider/: anthropic.rs  llama.rs  mod.rs
crates/llm-toolkit/src/template/: mod.rs
crates/speedtest-to-influx/: Cargo.toml  default.nix
crates/speedtest-to-influx/src/: main.rs
docker/: Dockerfile.llm-assistant  Dockerfile.llm-ui
embeddings/: Cargo.toml  README.md  config.ini.example  text.json
embeddings/src/: builder.rs  common.rs  config.rs  cost.rs  graph.rs  main.rs  plot.rs  prompt.rs  query.rs  search.rs  types.rs  unlinked.rs
focus/: Cargo.toml
focus/src/: appkiller.rs
gardener/: .gitignore  Cargo.toml
gardener/src/: clean.rs  export.rs  main.rs
homecooked-hack/: Cargo.toml
llm-assistant/: Cargo.toml
llm-assistant/config/: config.ini.example  personas.yml
llm-assistant/config/templates/: alt.yml  debate.yml  git.yml  procon.yml  question.yml  slack.yml  summary.yml
llm-assistant/src/: completion.rs  config.rs  main.rs  models.rs  output.rs  readwise.rs  smartgpt.rs  summary.rs  template.rs  web.rs  youtube.rs
llm-assistant/src/commands/: completion.rs  smartgpt.rs  web.rs
llm-assistant/src/config/: personas.yml
llm-assistant/src/document/: mod.rs
llm-assistant/src/prompt/: mod.rs
llm-assistant/src/provider/: mod.rs  openai.rs
llm-assistant/src/server/: errors.rs  mod.rs  openai_adapter.rs  tools.rs
llm-assistant/src/tools/: mod.rs  readwise.rs  web.rs  youtube.rs
llm-assistant/templates/: breakdown.yml  text.yml
llm-toolkit/: Cargo.toml
llm-toolkit/src/: lib.rs
llm-toolkit/src/document/loader/: mod.rs  readwise.rs  web_article.rs  youtube.rs
llm-toolkit/src/prompt/: mod.rs
llm-toolkit/src/provider/: anthropic.rs  llama.rs  mod.rs  openai.rs
llm-toolkit/src/template/: mod.rs
llm-ui/: .dockerignore  .earthlyignore  .env.production  .gitignore  .tool-versions  Earthfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs
llm-ui/app/: actions.ts  globals.css  layout.tsx
llm-ui/app/api/chat/: route.ts
llm-ui/app/api/config/: route.ts
llm-ui/app/chat/[id]/: page.tsx
llm-ui/app/tools/readwise/: page.tsx
llm-ui/app/tools/web/: page.tsx
llm-ui/app/tools/youtube/: page.tsx
llm-ui/components/: chat-list.tsx  chat-message-actions.tsx  chat-message.tsx  chat-panel.tsx  chat-settings.tsx  chat.tsx  footer.tsx  header.tsx  output.tsx  prompt-form.tsx  providers.tsx  sidebar-actions.tsx  sidebar-item.tsx  sidebar-list.tsx  sidebar.tsx  spellbook.tsx  tool.tsx
llm-ui/components/ui/: button.tsx  codeblock.tsx  icons.tsx  sliders.tsx
llm-ui/lib/: swr-utils.ts  tools.ts  types.ts  utils.ts
llm-ui/lib/hooks/: use-mutation-observer.tsx
nix/: checks.nix  crane.nix  devshell.nix
speedtest-to-influx/: Cargo.toml
speedtest-to-influx/src/: influx.rs  main.rs  speedtest.rs
webapp-wrappers/: justfile
