[workspace]
members = [
    "focus",
    "gardener",
    "speedtest-to-influx",
    "embeddings",
    "llm-toolkit",
    "llm-assistant",
]
resolver = "2"

[profile.release]
# lto = true  # Enable link-time optimization.

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
owo-colors = "5.0.0"
ignore = "0.4.21"

futures = "0.3.29"
directories = "5.0.1"
configparser = "3.0.3"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }
lazy_static = "1.4.0"
url = "2.5.0"
