[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {workspace = true}
anyhow = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
owo-colors = { workspace = true }
directories = { workspace = true }
configparser = { workspace = true }
async-openai = "0.10.1"
rmp-serde = "1.1.1"
tiktoken-rs = "0.3.3"
try-partialord = "0.1.3"
crc32fast = "1.3.2"
shellexpand = "3.1.0"
dialoguer = { version = "0.10.3", default_features = false, features = ["fuzzy-select"] }
urlencoding = "2.1.2"
open = "4.0.1"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
bhtsne = { version = "0.5.2", default_features = false }
plotly = "0.8.3"
