[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {workspace = true}
anyhow = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
owo-colors = { workspace = true }
directories = { workspace = true }
configparser = { workspace = true }
async-openai = { default-features = false, version = "0.10.3" }
rmp-serde = "1.1.1"
tiktoken-rs = { version = "0.4.3", default-features = false }
try-partialord = "0.1.3"
crc32fast = { default-features = false, version = "1.3.2" }
shellexpand = "3.1.0"
dialoguer = { version = "0.10.4", default-features = false, features = ["fuzzy-select"] }
urlencoding = "2.1.2"
open = "5.0.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "ansi"], default-features = false }
bhtsne = { version = "0.5.2", default-features = false }
plotly = "0.8.4"
lazy_static = { workspace = true }
