[package]
name = "gardener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ignore = { workspace = true }
obsidian-export = "22.11.0"
percent-encoding = "2.3.0"
pulldown-cmark = "0.9.3"
regex = { version = "1.8.4", default-features = false }
