[package]
name = "gardener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ignore = { workspace = true }
obsidian-export = "23.12.0"
percent-encoding = { default-features = false, version = "2.3.1" }
pulldown-cmark = { default-features = false, version = "0.9.3" }
regex = { version = "1.10.4", default-features = false }
