[package]
name = "llm-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm-toolkit = { path = "../llm-toolkit" }

clap = { workspace = true }
anyhow = { workspace = true }
owo-colors = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9.25"
