[package]
name = "llm-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
async-openai = "0.12.2"
async-trait = "0.1.72"
thiserror = "1.0.44"
article_scraper = "2.0.0"
url = "2.4.0"
tinytemplate = "1.2.1"
rs-llama-cpp = "0.1.66"
lazy_static = { workspace = true }
