[package]
name = "speedtest-to-influx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
owo-colors = { workspace = true }
tokio = { workspace = true }
influxdb = { version = "0.6", default-features = false, features = ["derive", "use-serde", "reqwest-client"] }
chrono = { version = "0.4.26" }
duration-string = "0.3.0"
