[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homecooked-hack = { version = "0.1", path = "../homecooked-hack" }
clap = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
owo-colors = { workspace = true }
directories = { workspace = true }
configparser = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
lazy_static = { workspace = true }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
async-openai = { version = "0.32.3", features = [
  "embedding",
  "chat-completion",
] }
rmp-serde = "1.3.1"
tiktoken-rs = { version = "0.9.1", default-features = false }
try-partialord = "0.1.3"
crc32fast = { default-features = false, version = "1.3.2" }
shellexpand = "3.1.0"
dialoguer = { version = "0.12.0", default-features = false, features = [
  "fuzzy-select",
] }
urlencoding = "2.1.3"
open = "5.0.1"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "ansi",
], default-features = false }
bhtsne = { version = "0.5.2", default-features = false }
plotly = "0.14.0"
thiserror = "2.0.18"
