[package]
name = "speedtest-to-influx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homecooked-hack = { version = "0.1", path = "../homecooked-hack" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
owo-colors = { workspace = true }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
influxdb = { version = "0.7", default-features = false, features = [
  "reqwest-client",
  "derive",
] }
chrono = { version = "0.4.31", default-features = false }
duration-string = "0.5.0"
